modifying error calcs to not specify nmembers when calling bootgen_multimem

--- a/ERRORCALC/CALP/errorcalc_calp.ipynb
+++ b/ERRORCALC/CALP/errorcalc_calp.ipynb
@@ -196,7 +196,7 @@
     "        \n",
     "        ## bootstrapped mean future CA precip trends \n",
     "        b = boot.bootgen_multimem(le_dat_future.sel(Model = le)[\"ca_p_trend\"].dropna(dim = \"Member\"), \n",
-    "                                  nboots, nmemf, seed=3).values\n",
+    "                                  nmemf, seed=3).values\n",
     "        boots_ptrend.append(b - le_mean_captrend[j])\n",
     "        \n",
     "    boots_corr_p = np.concatenate(boots_corr_p)\n",
@@ -1194,7 +1194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.11"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
