--- a/ERRORCALC/JLAT/errorcalc_1mem.ipynb
+++ b/ERRORCALC/JLAT/errorcalc_1mem.ipynb
@@ -58,16 +58,16 @@
     "nmemsp=1\n",
     "nmemsf=1\n",
     "    \n",
-    "bootCanESM2_p = boot.bootgen_multimem(up_CanESM2, nboots, nmemsp, seed=3)\n",
-    "bootCanESM2_f = boot.bootgen_multimem(uf_CanESM2, nboots, nmemsf, seed=3)\n",
-    "bootCESM_p = boot.bootgen_multimem(up_CESM, nboots, nmemsp, seed=3)\n",
-    "bootCESM_f = boot.bootgen_multimem(uf_CESM, nboots, nmemsf, seed=3)\n",
-    "bootCSIRO_p = boot.bootgen_multimem(up_CSIRO, nboots, nmemsp, seed=3)\n",
-    "bootCSIRO_f = boot.bootgen_multimem(uf_CSIRO, nboots, nmemsf, seed=3)\n",
-    "bootGFDL_p = boot.bootgen_multimem(up_GFDL, nboots, nmemsp, seed=3)\n",
-    "bootGFDL_f = boot.bootgen_multimem(uf_GFDL, nboots, nmemsf, seed=3)\n",
-    "bootMPI_p = boot.bootgen_multimem(up_MPI, nboots, nmemsp, seed=3)\n",
-    "bootMPI_f = boot.bootgen_multimem(uf_MPI, nboots, nmemsf, seed=3)\n",
+    "bootCanESM2_p = boot.bootgen_multimem(up_CanESM2, nmemsp, seed=3)\n",
+    "bootCanESM2_f = boot.bootgen_multimem(uf_CanESM2, nmemsf, seed=3)\n",
+    "bootCESM_p = boot.bootgen_multimem(up_CESM, nmemsp, seed=3)\n",
+    "bootCESM_f = boot.bootgen_multimem(uf_CESM, nmemsf, seed=3)\n",
+    "bootCSIRO_p = boot.bootgen_multimem(up_CSIRO, nmemsp, seed=3)\n",
+    "bootCSIRO_f = boot.bootgen_multimem(uf_CSIRO, nmemsf, seed=3)\n",
+    "bootGFDL_p = boot.bootgen_multimem(up_GFDL, nmemsp, seed=3)\n",
+    "bootGFDL_f = boot.bootgen_multimem(uf_GFDL, nmemsf, seed=3)\n",
+    "bootMPI_p = boot.bootgen_multimem(up_MPI, nmemsp, seed=3)\n",
+    "bootMPI_f = boot.bootgen_multimem(uf_MPI, nmemsf, seed=3)\n",
     "    \n",
     "jlat_CanESM2_p=np.zeros(nboots) ; jlat_CanESM2_f=np.zeros(nboots)\n",
     "jlat_CESM_p=np.zeros(nboots) ; jlat_CESM_f=np.zeros(nboots)\n",
