--- a/ERRORCALC/JLAT/errorcalc_cmip5.ipynb
+++ b/ERRORCALC/JLAT/errorcalc_cmip5.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,38 @@
       "bcc-csm1-1\n",
       "bcc-csm1-1-m\n",
       "BNU-ESM\n",
-      "CanESM2\n"
+      "CanESM2\n",
+      "CCSM4\n",
+      "CESM1-BGC\n",
+      "CESM1-CAM5\n",
+      "CESM1-WACCM\n",
+      "CMCC-CM\n",
+      "CMCC-CMS\n",
+      "CNRM-CM5\n",
+      "CSIRO-Mk3-6-0\n",
+      "EC-EARTH\n",
+      "FGOALS-g2\n",
+      "FIO-ESM\n",
+      "GFDL-CM3\n",
+      "GFDL-ESM2G\n",
+      "GFDL-ESM2M\n",
+      "GISS-E2-H\n",
+      "GISS-E2-R\n",
+      "HadGEM2-AO\n",
+      "HadGEM2-CC\n",
+      "HadGEM2-ES\n",
+      "inmcm4\n",
+      "IPSL-CM5A-LR\n",
+      "IPSL-CM5A-MR\n",
+      "IPSL-CM5B-LR\n",
+      "MIROC5\n",
+      "MIROC-ESM\n",
+      "MIROC-ESM-CHEM\n",
+      "MPI-ESM-LR\n",
+      "MPI-ESM-MR\n",
+      "MRI-CGCM3\n",
+      "NorESM1-M\n",
+      "NorESM1-ME\n"
      ]
     }
    ],
@@ -101,16 +132,16 @@
     "    nmemsp=cmip5models.loc[index, \"Nmempast\"]\n",
     "    nmemsf=cmip5models.loc[index, \"Nmemfuture\"]\n",
     "    \n",
-    "    bootCanESM2_p = boot.bootgen_multimem(up_CanESM2, nboots, nmemsp, seed=3)\n",
-    "    bootCanESM2_f = boot.bootgen_multimem(uf_CanESM2, nboots, nmemsf, seed=3)\n",
-    "    bootCESM_p = boot.bootgen_multimem(up_CESM, nboots, nmemsp, seed=3)\n",
-    "    bootCESM_f = boot.bootgen_multimem(uf_CESM, nboots, nmemsf, seed=3)\n",
-    "    bootCSIRO_p = boot.bootgen_multimem(up_CSIRO, nboots, nmemsp, seed=3)\n",
-    "    bootCSIRO_f = boot.bootgen_multimem(uf_CSIRO, nboots, nmemsf, seed=3)\n",
-    "    bootGFDL_p = boot.bootgen_multimem(up_GFDL, nboots, nmemsp, seed=3)\n",
-    "    bootGFDL_f = boot.bootgen_multimem(uf_GFDL, nboots, nmemsf, seed=3)\n",
-    "    bootMPI_p = boot.bootgen_multimem(up_MPI, nboots, nmemsp, seed=3)\n",
-    "    bootMPI_f = boot.bootgen_multimem(uf_MPI, nboots, nmemsf, seed=3)\n",
+    "    bootCanESM2_p = boot.bootgen_multimem(up_CanESM2, nmemsp, seed=3)\n",
+    "    bootCanESM2_f = boot.bootgen_multimem(uf_CanESM2, nmemsf, seed=3)\n",
+    "    bootCESM_p = boot.bootgen_multimem(up_CESM, nmemsp, seed=3)\n",
+    "    bootCESM_f = boot.bootgen_multimem(uf_CESM, nmemsf, seed=3)\n",
+    "    bootCSIRO_p = boot.bootgen_multimem(up_CSIRO, nmemsp, seed=3)\n",
+    "    bootCSIRO_f = boot.bootgen_multimem(uf_CSIRO, nmemsf, seed=3)\n",
+    "    bootGFDL_p = boot.bootgen_multimem(up_GFDL, nmemsp, seed=3)\n",
+    "    bootGFDL_f = boot.bootgen_multimem(uf_GFDL, nmemsf, seed=3)\n",
+    "    bootMPI_p = boot.bootgen_multimem(up_MPI, nmemsp, seed=3)\n",
+    "    bootMPI_f = boot.bootgen_multimem(uf_MPI, nmemsf, seed=3)\n",
     "    \n",
     "    jlat_CanESM2_p=np.zeros(nboots) ; jlat_CanESM2_f=np.zeros(nboots)\n",
     "    jlat_CESM_p=np.zeros(nboots) ; jlat_CESM_f=np.zeros(nboots)\n",
@@ -171,26 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 1.         -0.79258905]\n",
-      " [-0.79258905  1.        ]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(result)\n",
-    "#test = np.corrcoef(jlatpconcat, jlatdifconcat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,30 +216,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<xarray.DataArray 'sigx' (Model: 37)>\n",
-      "array([0.58296299, 0.58296299, 0.58296299, 0.58296299, 0.58296299,\n",
-      "       0.2562448 , 0.23306926, 0.58296299, 0.33195221, 0.58296299,\n",
-      "       0.58296299, 0.58296299, 0.2562448 , 0.17939958, 0.58296299,\n",
-      "       0.58296299, 0.33195221, 0.58296299, 0.58296299, 0.58296299,\n",
-      "       0.40710361, 0.40710361, 0.58296299, 0.33195221, 0.33195221,\n",
-      "       0.58296299, 0.28604551, 0.58296299, 0.58296299, 0.33195221,\n",
-      "       0.58296299, 0.58296299, 0.33195221, 0.58296299, 0.58296299,\n",
-      "       0.58296299, 0.58296299])\n",
-      "Coordinates:\n",
-      "  * Model    (Model) object 'ACCESS1-0' 'ACCESS1-3' ... 'NorESM1-M' 'NorESM1-ME'\n"
-     ]
-    }
-   ],
    "source": [
-    "print(sigx_xr)"
+    "Output the error for just one member"
    ]
   },
   {
