--- a/ERRORCALC/JLAT/errorcalc_cmip6.ipynb
+++ b/ERRORCALC/JLAT/errorcalc_cmip6.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,42 @@
      "text": [
       "ACCESS-CM2\n",
       "ACCESS-ESM1-5\n",
-      "AWI-CM-1-1-MR\n"
+      "AWI-CM-1-1-MR\n",
+      "BCC-CSM2-MR\n",
+      "CAMS-CSM1-0\n",
+      "CanESM5\n",
+      "CanESM5-CanOE\n",
+      "CESM2\n",
+      "CESM2-WACCM\n",
+      "CIESM\n",
+      "CMCC-CM2-SR5\n",
+      "CNRM-CM6-1\n",
+      "CNRM-CM6-1-HR\n",
+      "CNRM-ESM2-1\n",
+      "EC-Earth3\n",
+      "EC-Earth3-Veg\n",
+      "FGOALS-f3-L\n",
+      "FGOALS-g3\n",
+      "FIO-ESM-2-0\n",
+      "GFDL-CM4\n",
+      "GFDL-ESM4\n",
+      "GISS-E2-1-G\n",
+      "HadGEM3-GC31-LL\n",
+      "HadGEM3-GC31-MM\n",
+      "INM-CM4-8\n",
+      "INM-CM5-0\n",
+      "IPSL-CM6A-LR\n",
+      "KACE-1-0-G\n",
+      "MCM-UA-1-0\n",
+      "MIROC6\n",
+      "MIROC-ES2L\n",
+      "MPI-ESM1-2-HR\n",
+      "MPI-ESM1-2-LR\n",
+      "MRI-ESM2-0\n",
+      "NESM3\n",
+      "NorESM2-LM\n",
+      "NorESM2-MM\n",
+      "UKESM1-0-LL\n"
      ]
     }
    ],
@@ -98,16 +133,16 @@
     "    nmemsp = cmip6models.loc[index, \"Nmempast\"]\n",
     "    nmemsf = cmip6models.loc[index, \"Nmemfuture\"]\n",
     "    \n",
-    "    bootCanESM2_p = boot.bootgen_multimem(up_CanESM2, nboots, nmemsp, seed=3)\n",
-    "    bootCanESM2_f = boot.bootgen_multimem(uf_CanESM2, nboots, nmemsf, seed=3)\n",
-    "    bootCESM_p = boot.bootgen_multimem(up_CESM, nboots, nmemsp, seed=3)\n",
-    "    bootCESM_f = boot.bootgen_multimem(uf_CESM, nboots, nmemsf, seed=3)\n",
-    "    bootCSIRO_p = boot.bootgen_multimem(up_CSIRO, nboots, nmemsp, seed=3)\n",
-    "    bootCSIRO_f = boot.bootgen_multimem(uf_CSIRO, nboots, nmemsf, seed=3)\n",
-    "    bootGFDL_p = boot.bootgen_multimem(up_GFDL, nboots, nmemsp, seed=3)\n",
-    "    bootGFDL_f = boot.bootgen_multimem(uf_GFDL, nboots, nmemsf, seed=3)\n",
-    "    bootMPI_p = boot.bootgen_multimem(up_MPI, nboots, nmemsp, seed=3)\n",
-    "    bootMPI_f = boot.bootgen_multimem(uf_MPI, nboots, nmemsf, seed=3)\n",
+    "    bootCanESM2_p = boot.bootgen_multimem(up_CanESM2, nmemsp, seed=3)\n",
+    "    bootCanESM2_f = boot.bootgen_multimem(uf_CanESM2, nmemsf, seed=3)\n",
+    "    bootCESM_p = boot.bootgen_multimem(up_CESM, nmemsp, seed=3)\n",
+    "    bootCESM_f = boot.bootgen_multimem(uf_CESM, nmemsf, seed=3)\n",
+    "    bootCSIRO_p = boot.bootgen_multimem(up_CSIRO, nmemsp, seed=3)\n",
+    "    bootCSIRO_f = boot.bootgen_multimem(uf_CSIRO, nmemsf, seed=3)\n",
+    "    bootGFDL_p = boot.bootgen_multimem(up_GFDL, nmemsp, seed=3)\n",
+    "    bootGFDL_f = boot.bootgen_multimem(uf_GFDL, nmemsf, seed=3)\n",
+    "    bootMPI_p = boot.bootgen_multimem(up_MPI, nmemsp, seed=3)\n",
+    "    bootMPI_f = boot.bootgen_multimem(uf_MPI, nmemsf, seed=3)\n",
     "    \n",
     "    jlat_CanESM2_p=np.zeros(nboots) ; jlat_CanESM2_f=np.zeros(nboots)\n",
     "    jlat_CESM_p=np.zeros(nboots) ; jlat_CESM_f=np.zeros(nboots)\n",
