Including the output of yearly values for the MMLEA

--- a/DATASORT/JLAT/outputMMLEA.ipynb
+++ b/DATASORT/JLAT/outputMMLEA.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -343,13 +343,22 @@
     "            \n",
     "        upastjja=cal.season_mean(upast,\"ua\",season=\"JJA\")\n",
     "        ufutjja=cal.season_mean(ufut,\"ua\",season=\"JJA\")\n",
-    "        \n",
+    "        upastjja_ts=cal.season_ts(upast, \"ua\", season=\"JJA\")\n",
+    "        ufutjja_ts=cal.season_ts(ufut,\"ua\", season=\"JJA\")\n",
+    "\n",
     "        upastjja=upastjja.dropna(\"lat\")\n",
     "        ufutjja=ufutjja.dropna(\"lat\")\n",
     "        upastjjainterp=upastjja.interp(lat=np.linspace(-90,90,181),\n",
     "                                      method='cubic')\n",
     "        ufutjjainterp=ufutjja.interp(lat=np.linspace(-90,90,181),\n",
     "                                    method='cubic')\n",
+    "        \n",
+    "        upastjja_ts = upastjja_ts.dropna(\"lat\")\n",
+    "        ufutjja_ts = ufutjja_ts.dropna(\"lat\")\n",
+    "        upastjja_tsinterp = upastjja_ts.interp(lat=np.linspace(-90,90,181),\n",
+    "                                               method='cubic')\n",
+    "        ufutjja_tsinterp = ufutjja_ts.interp(lat=np.linspace(-90,90,181),\n",
+    "                                            method='cubic')\n",
     "        \n",
     "        if (imem == 0):\n",
     "            upast_jja_zm = xr.DataArray(np.zeros([nmems, upastjjainterp.lat.size]),\n",
@@ -358,12 +367,23 @@
     "            ufut_jja_zm = xr.DataArray(np.zeros([nmems, ufutjjainterp.lat.size]),\n",
     "                                      coords=[np.arange(0,nmems,1), ufutjjainterp[\"lat\"]],\n",
     "                                      dims=[\"member\",\"lat\"], name=\"ufut_jja_zm\")\n",
+    "            upast_jja_ts_zm = xr.DataArray(np.zeros([nmems, upastjja_tsinterp.time.size, upastjja_tsinterp.lat.size]),\n",
+    "                                          coords=[np.arange(0,nmems,1), upastjja_tsinterp[\"time\"], upastjja_tsinterp[\"lat\"]],\n",
+    "                                          dims=[\"member\",\"time\",\"lat\"], name=\"upast_jja_ts_zm\")\n",
+    "            ufut_jja_ts_zm = xr.DataArray(np.zeros([nmems, ufutjja_tsinterp.time.size, ufutjja_tsinterp.lat.size]),\n",
+    "                                          coords=[np.arange(0,nmems,1), ufutjja_tsinterp[\"time\"], ufutjja_tsinterp[\"lat\"]],\n",
+    "                                          dims=[\"member\",\"time\",\"lat\"], name=\"ufut_jja_ts_zm\")\n",
+    "            \n",
     "            \n",
     "        upast_jja_zm[imem,:]=upastjjainterp\n",
     "        ufut_jja_zm[imem,:]=ufutjjainterp\n",
+    "        upast_jja_ts_zm[imem,:,:] = upastjja_tsinterp\n",
+    "        ufut_jja_ts_zm[imem,:,:] = ufutjja_tsinterp\n",
     "    \n",
     "    upast_jja_zm.to_netcdf(path=\"./DATA/uzm_\"+modnames[imod]+\".nc\")\n",
     "    ufut_jja_zm.to_netcdf(path=\"./DATA/uzm_\"+modnames[imod]+\".nc\")\n",
+    "    upast_jja_ts_zm.to_netcdf(path=\"./DATA/uzm_\"+modnames[imod]+\".nc\")\n",
+    "    ufut_jja_ts_zm.to_netcdf(path=\"./DATA/uzm_\"+modnames[imod]+\".nc\")\n",
     "            "
    ]
   },
