updating SHJET error calcs to subtract the ensemble mean instead of the bootstrap mean and also to output the 2.5th-97.5 percentile range of internal variability anomalies in errorcalc_1mem.ipynb

--- a/ERRORCALC/JLAT/errorcalc_1mem.ipynb
+++ b/ERRORCALC/JLAT/errorcalc_1mem.ipynb
@@ -32,25 +32,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dat = xr.open_dataset(mmleapath+\"uzm_CanESM2.nc\")\n",
-    "up_CanESM2 = dat.upast_jja_zm ; uf_CanESM2 = dat.ufut_jja_zm\n",
-    "dat = xr.open_dataset(mmleapath+\"uzm_CESM1-CAM5.nc\")\n",
-    "up_CESM = dat.upast_jja_zm ; uf_CESM = dat.ufut_jja_zm\n",
-    "dat = xr.open_dataset(mmleapath+\"uzm_CSIRO-Mk3-6-0.nc\")\n",
-    "up_CSIRO = dat.upast_jja_zm ; uf_CSIRO = dat.ufut_jja_zm\n",
-    "dat = xr.open_dataset(mmleapath+\"uzm_GFDL-CM3.nc\")\n",
-    "up_GFDL = dat.upast_jja_zm ; uf_GFDL = dat.ufut_jja_zm\n",
-    "dat = xr.open_dataset(mmleapath+\"uzm_MPI-ESM.nc\")\n",
-    "up_MPI = dat.upast_jja_zm ; uf_MPI = dat.ufut_jja_zm"
+    "datp = xr.open_dataset(mmleapath+\"uzmpast_CanESM2.nc\") ; datf = xr.open_dataset(mmleapath+\"uzmfut_CanESM2.nc\")\n",
+    "up_CanESM2 = datp.upast_jja_zm ; uf_CanESM2 = datf.ufut_jja_zm\n",
+    "datp = xr.open_dataset(mmleapath+\"uzmpast_CESM1-CAM5.nc\") ; datf = xr.open_dataset(mmleapath+\"uzmfut_CanESM2.nc\")\n",
+    "up_CESM = datp.upast_jja_zm ; uf_CESM = datf.ufut_jja_zm\n",
+    "datp = xr.open_dataset(mmleapath+\"uzmpast_CSIRO-Mk3-6-0.nc\") ; datf = xr.open_dataset(mmleapath+\"uzmfut_CSIRO-Mk3-6-0.nc\")\n",
+    "up_CSIRO = datp.upast_jja_zm ; uf_CSIRO = datf.ufut_jja_zm\n",
+    "datp = xr.open_dataset(mmleapath+\"uzmpast_GFDL-CM3.nc\") ; datf = xr.open_dataset(mmleapath+\"uzmfut_GFDL-CM3.nc\")\n",
+    "up_GFDL = datp.upast_jja_zm ; uf_GFDL = datf.ufut_jja_zm\n",
+    "datp = xr.open_dataset(mmleapath+\"uzmpast_MPI-ESM.nc\") ; datf = xr.open_dataset(mmleapath+\"uzmfut_MPI-ESM.nc\")\n",
+    "up_MPI = datp.upast_jja_zm ; uf_MPI = datf.ufut_jja_zm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<xarray.DataArray 'upast_jja_zm' (member: 50, lat: 181)>\n",
+      "array([[nan, nan, nan, ..., nan, nan, nan],\n",
+      "       [nan, nan, nan, ..., nan, nan, nan],\n",
+      "       [nan, nan, nan, ..., nan, nan, nan],\n",
+      "       ...,\n",
+      "       [nan, nan, nan, ..., nan, nan, nan],\n",
+      "       [nan, nan, nan, ..., nan, nan, nan],\n",
+      "       [nan, nan, nan, ..., nan, nan, nan]])\n",
+      "Coordinates:\n",
+      "  * member   (member) int64 0 1 2 3 4 5 6 7 8 9 ... 41 42 43 44 45 46 47 48 49\n",
+      "  * lat      (lat) float64 -90.0 -89.0 -88.0 -87.0 -86.0 ... 87.0 88.0 89.0 90.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(up_CanESM2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ensemble mean jet latitudes\n",
+    "up_CanESM2_em = up_CanESM2.mean(dim='member') ; uf_CanESM2_em = uf_CanESM2.mean(dim='member')\n",
+    "up_CESM_em = up_CESM.mean(dim='member') ; uf_CESM_em = uf_CESM.mean(dim='member')\n",
+    "up_CSIRO_em = up_CSIRO.mean(dim='member') ; uf_CSIRO_em = uf_CSIRO.mean(dim='member')\n",
+    "up_GFDL_em = up_GFDL.mean(dim='member') ; uf_GFDL_em = uf_GFDL.mean(dim='member')\n",
+    "up_MPI_em = up_MPI.mean(dim='member') ; uf_MPI_em = uf_MPI.mean(dim='member')\n",
+    "\n",
+    "\n",
+    "jlatp_CanESM2_em, jspeed = jlat.calcjetlat(up_CanESM2_em, -80, -20) \n",
+    "jlatf_CanESM2_em, jspeed = jlat.calcjetlat(uf_CanESM2_em, -80, -20)\n",
+    "jlatp_CESM_em, jspeed = jlat.calcjetlat(up_CESM_em, -80, -20) \n",
+    "jlatf_CESM_em, jspeed = jlat.calcjetlat(uf_CESM_em, -80, -20)\n",
+    "jlatp_CSIRO_em, jspeed = jlat.calcjetlat(up_CSIRO_em, -80, -20) \n",
+    "jlatf_CSIRO_em, jspeed = jlat.calcjetlat(uf_CSIRO_em, -80, -20)\n",
+    "jlatp_GFDL_em, jspeed = jlat.calcjetlat(up_GFDL_em, -80, -20) \n",
+    "jlatf_GFDL_em, jspeed = jlat.calcjetlat(uf_GFDL_em, -80, -20)\n",
+    "jlatp_MPI_em, jspeed = jlat.calcjetlat(up_MPI_em, -80, -20) \n",
+    "jlatf_MPI_em, jspeed = jlat.calcjetlat(uf_MPI_em, -80, -20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,17 +158,17 @@
     "jlat_GFDL_pm = np.mean(jlat_GFDL_p)\n",
     "jlat_MPI_pm = np.mean(jlat_MPI_p)\n",
     "    \n",
-    "jlatdif_CanESM2[:] = jlatdif_CanESM2[:] - jlatdifm_CanESM2\n",
-    "jlatdif_CESM[:] = jlatdif_CESM[:] - jlatdifm_CESM\n",
-    "jlatdif_CSIRO[:] = jlatdif_CSIRO[:] - jlatdifm_CSIRO\n",
-    "jlatdif_GFDL[:] = jlatdif_GFDL[:] - jlatdifm_GFDL\n",
-    "jlatdif_MPI[:] = jlatdif_MPI[:] - jlatdifm_MPI\n",
+    "jlatdif_CanESM2[:] = jlatdif_CanESM2[:] - (jlatf_CanESM2_em - jlatp_CanESM2_em)\n",
+    "jlatdif_CESM[:] = jlatdif_CESM[:] - (jlatf_CESM_em - jlatp_CESM_em)\n",
+    "jlatdif_CSIRO[:] = jlatdif_CSIRO[:] - (jlatf_CSIRO_em - jlatp_CSIRO_em)\n",
+    "jlatdif_GFDL[:] = jlatdif_GFDL[:] - (jlatf_GFDL_em - jlatp_GFDL_em)\n",
+    "jlatdif_MPI[:] = jlatdif_MPI[:] - (jlatf_MPI_em - jlatp_MPI_em)\n",
     "\n",
-    "jlat_CanESM2_p[:] = jlat_CanESM2_p[:] - jlat_CanESM2_pm\n",
-    "jlat_CESM_p[:] = jlat_CESM_p[:] - jlat_CESM_pm\n",
-    "jlat_CSIRO_p[:] = jlat_CSIRO_p[:] - jlat_CSIRO_pm\n",
-    "jlat_GFDL_p[:] = jlat_GFDL_p[:] - jlat_GFDL_pm\n",
-    "jlat_MPI_p[:] = jlat_MPI_p[:] - jlat_MPI_pm\n",
+    "jlat_CanESM2_p[:] = jlat_CanESM2_p[:] - jlatp_CanESM2_em\n",
+    "jlat_CESM_p[:] = jlat_CESM_p[:] - jlatp_CESM_em\n",
+    "jlat_CSIRO_p[:] = jlat_CSIRO_p[:] - jlatp_CSIRO_em\n",
+    "jlat_GFDL_p[:] = jlat_GFDL_p[:] - jlatp_GFDL_em\n",
+    "jlat_MPI_p[:] = jlat_MPI_p[:] - jlatp_MPI_em\n",
     "    \n",
     "jlatdifconcat = np.concatenate((jlatdif_CanESM2, jlatdif_CESM, jlatdif_CSIRO, jlatdif_GFDL, jlatdif_MPI))\n",
     "jlatpconcat = np.concatenate((jlat_CanESM2_p, jlat_CESM_p, jlat_CSIRO_p, jlat_GFDL_p, jlat_MPI_p))\n",
@@ -128,7 +181,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5th to 95th percentile range of differences \n",
+    "#rint(up_CanESM2)\n",
+    "up_CanESM2_20mem = up_CanESM2.isel(member=slice(0,20))\n",
+    "up_CESM_20mem = up_CESM.isel(member=slice(0,20))\n",
+    "up_CSIRO_20mem = up_CSIRO.isel(member=slice(0,20))\n",
+    "up_GFDL_20mem = up_GFDL.isel(member=slice(0,20))\n",
+    "up_MPI_20mem = up_MPI.isel(member=slice(0,20))\n",
+    "\n",
+    "jlat_CanESM2_20mem = np.zeros([20])\n",
+    "jlat_CESM_20mem = np.zeros([20])\n",
+    "jlat_CSIRO_20mem = np.zeros([20])\n",
+    "jlat_GFDL_20mem = np.zeros([20])\n",
+    "jlat_MPI_20mem = np.zeros([20])\n",
+    "\n",
+    "\n",
+    "for imem in range(0,up_CanESM2_20mem.member.size,1):\n",
+    "    jlat_CanESM2_20mem[imem], jspeed = jlat.calcjetlat(up_CanESM2_20mem[imem,:], -80, -20)\n",
+    "    jlat_CESM_20mem[imem], jspeed = jlat.calcjetlat(up_CESM_20mem[imem,:], -80, -20)\n",
+    "    jlat_CSIRO_20mem[imem], jspeed = jlat.calcjetlat(up_CSIRO_20mem[imem,:], -80, -20)\n",
+    "    jlat_GFDL_20mem[imem], jspeed = jlat.calcjetlat(up_GFDL_20mem[imem,:], -80, -20)\n",
+    "    jlat_MPI_20mem[imem], jspeed = jlat.calcjetlat(up_MPI_20mem[imem,:], -80, -20)\n",
+    "    \n",
+    "jlat_CanESM2_20mem[:] = jlat_CanESM2_20mem[:] - jlatp_CanESM2_em\n",
+    "jlat_CESM_20mem[:] = jlat_CESM_20mem[:] - jlatp_CESM_em\n",
+    "jlat_CSIRO_20mem[:] = jlat_CSIRO_20mem[:] - jlatp_CSIRO_em\n",
+    "jlat_GFDL_20mem[:] = jlat_GFDL_20mem[:] - jlatp_GFDL_em\n",
+    "jlat_MPI_20mem[:] = jlat_MPI_20mem[:] - jlatp_MPI_em\n",
+    "\n",
+    "jlatconcat = np.concatenate( (jlat_CanESM2_20mem, jlat_CESM_20mem, jlat_CSIRO_20mem, jlat_GFDL_20mem, jlat_MPI_20mem))\n",
+    "ivmin95 = np.percentile(jlatconcat, 2.5)\n",
+    "ivmax95 = np.percentile(jlatconcat, 97.5)\n",
+    "ivmin95 = xr.DataArray(ivmin95, name='ivmin95')\n",
+    "ivmax95 = xr.DataArray(ivmax95, name='ivmax95')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<xarray.DataArray ()>\n",
+      "array(-1.11172309)\n"
+     ]
+    }
+   ],
+   "source": [
+    "ivmin95 = xr.DataArray(ivmin95)\n",
+    "print(ivmin95)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +251,9 @@
     "\n",
     "sigx_xr_1mem.to_netcdf(\"./DATA/errors_1mem.nc\")\n",
     "sigy_xr_1mem.to_netcdf(\"./DATA/errors_1mem.nc\", mode=\"a\")\n",
-    "rxy_xr_1mem.to_netcdf(\"./DATA/errors_1mem.nc\", mode=\"a\")"
+    "rxy_xr_1mem.to_netcdf(\"./DATA/errors_1mem.nc\", mode=\"a\")\n",
+    "ivmin95.to_netcdf(\"./DATA/errors_1mem.nc\", mode=\"a\")\n",
+    "ivmax95.to_netcdf(\"./DATA/errors_1mem.nc\", mode=\"a\")"
    ]
   },
   {
