--- a/ERRORCALC/JLAT/errorcalc_cmip5.ipynb
+++ b/ERRORCALC/JLAT/errorcalc_cmip5.ipynb
@@ -59,21 +59,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dat = xr.open_dataset(mmleapath+\"uzm_CanESM2.nc\")\n",
-    "up_CanESM2 = dat.upast_jja_zm ; uf_CanESM2 = dat.ufut_jja_zm\n",
-    "dat = xr.open_dataset(mmleapath+\"uzm_CESM1-CAM5.nc\")\n",
-    "up_CESM = dat.upast_jja_zm ; uf_CESM = dat.ufut_jja_zm\n",
-    "dat = xr.open_dataset(mmleapath+\"uzm_CSIRO-Mk3-6-0.nc\")\n",
-    "up_CSIRO = dat.upast_jja_zm ; uf_CSIRO = dat.ufut_jja_zm\n",
-    "dat = xr.open_dataset(mmleapath+\"uzm_GFDL-CM3.nc\")\n",
-    "up_GFDL = dat.upast_jja_zm ; uf_GFDL = dat.ufut_jja_zm\n",
-    "dat = xr.open_dataset(mmleapath+\"uzm_MPI-ESM.nc\")\n",
-    "up_MPI = dat.upast_jja_zm ; uf_MPI = dat.ufut_jja_zm"
+    "datp = xr.open_dataset(mmleapath+\"uzmpast_CanESM2.nc\") ; datf = xr.open_dataset(mmleapath+\"uzmfut_CanESM2.nc\")\n",
+    "up_CanESM2 = datp.upast_jja_zm ; uf_CanESM2 = datf.ufut_jja_zm\n",
+    "datp = xr.open_dataset(mmleapath+\"uzmpast_CESM1-CAM5.nc\") ; datf = xr.open_dataset(mmleapath+\"uzmfut_CanESM2.nc\")\n",
+    "up_CESM = datp.upast_jja_zm ; uf_CESM = datf.ufut_jja_zm\n",
+    "datp = xr.open_dataset(mmleapath+\"uzmpast_CSIRO-Mk3-6-0.nc\") ; datf = xr.open_dataset(mmleapath+\"uzmfut_CSIRO-Mk3-6-0.nc\")\n",
+    "up_CSIRO = datp.upast_jja_zm ; uf_CSIRO = datf.ufut_jja_zm\n",
+    "datp = xr.open_dataset(mmleapath+\"uzmpast_GFDL-CM3.nc\") ; datf = xr.open_dataset(mmleapath+\"uzmfut_GFDL-CM3.nc\")\n",
+    "up_GFDL = datp.upast_jja_zm ; uf_GFDL = datf.ufut_jja_zm\n",
+    "datp = xr.open_dataset(mmleapath+\"uzmpast_MPI-ESM.nc\") ; datf = xr.open_dataset(mmleapath+\"uzmfut_MPI-ESM.nc\")\n",
+    "up_MPI = datp.upast_jja_zm ; uf_MPI = datf.ufut_jja_zm"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ensemble mean jet latitudes\n",
+    "up_CanESM2_em = up_CanESM2.mean(dim='member') ; uf_CanESM2_em = uf_CanESM2.mean(dim='member')\n",
+    "up_CESM_em = up_CESM.mean(dim='member') ; uf_CESM_em = uf_CESM.mean(dim='member')\n",
+    "up_CSIRO_em = up_CSIRO.mean(dim='member') ; uf_CSIRO_em = uf_CSIRO.mean(dim='member')\n",
+    "up_GFDL_em = up_GFDL.mean(dim='member') ; uf_GFDL_em = uf_GFDL.mean(dim='member')\n",
+    "up_MPI_em = up_MPI.mean(dim='member') ; uf_MPI_em = uf_MPI.mean(dim='member')\n",
+    "\n",
+    "\n",
+    "jlatp_CanESM2_em, jspeed = jlat.calcjetlat(up_CanESM2_em, -80, -20) \n",
+    "jlatf_CanESM2_em, jspeed = jlat.calcjetlat(uf_CanESM2_em, -80, -20)\n",
+    "jlatp_CESM_em, jspeed = jlat.calcjetlat(up_CESM_em, -80, -20) \n",
+    "jlatf_CESM_em, jspeed = jlat.calcjetlat(uf_CESM_em, -80, -20)\n",
+    "jlatp_CSIRO_em, jspeed = jlat.calcjetlat(up_CSIRO_em, -80, -20) \n",
+    "jlatf_CSIRO_em, jspeed = jlat.calcjetlat(uf_CSIRO_em, -80, -20)\n",
+    "jlatp_GFDL_em, jspeed = jlat.calcjetlat(up_GFDL_em, -80, -20) \n",
+    "jlatf_GFDL_em, jspeed = jlat.calcjetlat(uf_GFDL_em, -80, -20)\n",
+    "jlatp_MPI_em, jspeed = jlat.calcjetlat(up_MPI_em, -80, -20) \n",
+    "jlatf_MPI_em, jspeed = jlat.calcjetlat(uf_MPI_em, -80, -20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -179,17 +205,17 @@
     "    jlat_GFDL_pm = np.mean(jlat_GFDL_p)\n",
     "    jlat_MPI_pm = np.mean(jlat_MPI_p)\n",
     "    \n",
-    "    jlatdif_CanESM2[:] = jlatdif_CanESM2[:] - jlatdifm_CanESM2\n",
-    "    jlatdif_CESM[:] = jlatdif_CESM[:] - jlatdifm_CESM\n",
-    "    jlatdif_CSIRO[:] = jlatdif_CSIRO[:] - jlatdifm_CSIRO\n",
-    "    jlatdif_GFDL[:] = jlatdif_GFDL[:] - jlatdifm_GFDL\n",
-    "    jlatdif_MPI[:] = jlatdif_MPI[:] - jlatdifm_MPI\n",
+    "    jlatdif_CanESM2[:] = jlatdif_CanESM2[:] - (jlatf_CanESM2_em - jlatp_CanESM2_em)\n",
+    "    jlatdif_CESM[:] = jlatdif_CESM[:] - (jlatf_CESM_em - jlatp_CESM_em)\n",
+    "    jlatdif_CSIRO[:] = jlatdif_CSIRO[:] - (jlatf_CSIRO_em - jlatp_CSIRO_em)\n",
+    "    jlatdif_GFDL[:] = jlatdif_GFDL[:] - (jlatf_GFDL_em - jlatp_GFDL_em)\n",
+    "    jlatdif_MPI[:] = jlatdif_MPI[:] - (jlatf_MPI_em - jlatp_MPI_em)\n",
     "    \n",
-    "    jlat_CanESM2_p[:] = jlat_CanESM2_p[:] - jlat_CanESM2_pm\n",
-    "    jlat_CESM_p[:] = jlat_CESM_p[:] - jlat_CESM_pm\n",
-    "    jlat_CSIRO_p[:] = jlat_CSIRO_p[:] - jlat_CSIRO_pm\n",
-    "    jlat_GFDL_p[:] = jlat_GFDL_p[:] - jlat_GFDL_pm\n",
-    "    jlat_MPI_p[:] = jlat_MPI_p[:] - jlat_MPI_pm\n",
+    "    jlat_CanESM2_p[:] = jlat_CanESM2_p[:] - jlatp_CanESM2_em\n",
+    "    jlat_CESM_p[:] = jlat_CESM_p[:] - jlatp_CESM_em\n",
+    "    jlat_CSIRO_p[:] = jlat_CSIRO_p[:] - jlatp_CSIRO_em\n",
+    "    jlat_GFDL_p[:] = jlat_GFDL_p[:] - jlatp_GFDL_em\n",
+    "    jlat_MPI_p[:] = jlat_MPI_p[:] - jlatp_MPI_em\n",
     "    \n",
     "    jlatdifconcat = np.concatenate((jlatdif_CanESM2, jlatdif_CESM, jlatdif_CSIRO, jlatdif_GFDL, jlatdif_MPI))\n",
     "    jlatpconcat = np.concatenate((jlat_CanESM2_p, jlat_CESM_p, jlat_CSIRO_p, jlat_GFDL_p, jlat_MPI_p))\n",
