--- a/FIGURE_SCRIPTS/fig_4.ipynb
+++ b/FIGURE_SCRIPTS/fig_4.ipynb
@@ -203,7 +203,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f6724c7efd0>]"
+       "[<matplotlib.lines.Line2D at 0x7f1e06c455f8>]"
       ]
      },
      "execution_count": 6,
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,9 @@
     "for color, tick in zip(colors, ax5.xaxis.get_major_ticks()):\n",
     "    tick.label1.set_color(color)\n",
     "\n",
-    "ax5.plot([-0.5,19],[stdevphippooled,stdevphippooled],linestyle='dotted', linewidth=3, color='black')\n",
+    "errordat = xr.open_dataset('../ERRORCALC/JLAT/DATA/errors_1mem.nc')\n",
+    "#ax5.plot([-0.5,19],[stdevphippooled,stdevphippooled],linestyle='dotted', linewidth=3, color='black')\n",
+    "ax5.plot([-0.5,19], [errordat['sigx_1mem'],errordat['sigx_1mem']], linestyle='dotted', linewidth=3, color='black')\n",
     "\n",
     "for imod in range(len(modnames)):\n",
     "    ax5.bar(imod*3+1,stdev_phip[imod], width=1, bottom=0, edgecolor='black', color=lecolor[imod])\n",
@@ -399,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
