modifying the T2m output for CMIP5 and CMIP6 to have 'Model' instead of 'model' as the coordinate - it just makes things easier

--- a/DATASORT/VWIND/outputCMIP5gmts.ipynb
+++ b/DATASORT/VWIND/outputCMIP5gmts.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -256,10 +256,10 @@
     "models=cmip5models['Model']\n",
     "nmodels=models.size\n",
     "\n",
-    "tas1memp = xr.DataArray(np.zeros(nmodels), coords=[models], dims=\"model\", name=\"tas1memp\")\n",
-    "tas1memf = xr.DataArray(np.zeros(nmodels), coords=[models], dims=\"model\", name=\"tas1memf\")\n",
-    "tasemp = xr.DataArray(np.zeros(nmodels), coords=[models], dims=\"model\", name=\"tasemp\")\n",
-    "tasemf = xr.DataArray(np.zeros(nmodels), coords=[models], dims=\"model\", name=\"tasemf\")\n",
+    "tas1memp = xr.DataArray(np.zeros(nmodels), coords=[models], dims=\"Model\", name=\"tas1memp\")\n",
+    "tas1memf = xr.DataArray(np.zeros(nmodels), coords=[models], dims=\"Model\", name=\"tas1memf\")\n",
+    "tasemp = xr.DataArray(np.zeros(nmodels), coords=[models], dims=\"Model\", name=\"tasemp\")\n",
+    "tasemf = xr.DataArray(np.zeros(nmodels), coords=[models], dims=\"Model\", name=\"tasemf\")\n",
     "\n",
     "# loop over models\n",
     "for index, modname in models.iteritems():\n",
