--- a/DATASORT/VWIND/outputCMIP6gmts.ipynb
+++ b/DATASORT/VWIND/outputCMIP6gmts.ipynb
@@ -422,10 +422,10 @@
     "models=cmip6models['Model']\n",
     "nmodels=models.size\n",
     "\n",
-    "tas1memp = xr.DataArray(np.zeros(nmodels), coords=[models], dims=\"model\", name=\"tas1memp\")\n",
-    "tas1memf = xr.DataArray(np.zeros(nmodels), coords=[models], dims=\"model\", name=\"tas1memf\")\n",
-    "tasemp = xr.DataArray(np.zeros(nmodels), coords=[models], dims=\"model\", name=\"tasemp\")\n",
-    "tasemf = xr.DataArray(np.zeros(nmodels), coords=[models], dims=\"model\", name=\"tasemf\")\n",
+    "tas1memp = xr.DataArray(np.zeros(nmodels), coords=[models], dims=\"Model\", name=\"tas1memp\")\n",
+    "tas1memf = xr.DataArray(np.zeros(nmodels), coords=[models], dims=\"Model\", name=\"tas1memf\")\n",
+    "tasemp = xr.DataArray(np.zeros(nmodels), coords=[models], dims=\"Model\", name=\"tasemp\")\n",
+    "tasemf = xr.DataArray(np.zeros(nmodels), coords=[models], dims=\"Model\", name=\"tasemf\")\n",
     "\n",
     "# loop over models\n",
     "for index, modname in models.iteritems():\n",
