changing the way I was calculating the IV range in errorcalc_1mem in JLAT and VWIND as it wasn't done in a sensible way before

--- a/ERRORCALC/JLAT/errorcalc_1mem.ipynb
+++ b/ERRORCALC/JLAT/errorcalc_1mem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,41 +207,32 @@
     "    jlat_GFDL_20mem[imem], jspeed = jlat.calcjetlat(up_GFDL_20mem[imem,:], -80, -20)\n",
     "    jlat_MPI_20mem[imem], jspeed = jlat.calcjetlat(up_MPI_20mem[imem,:], -80, -20)\n",
     "    \n",
-    "jlat_CanESM2_20mem[:] = jlat_CanESM2_20mem[:] - jlatp_CanESM2_em\n",
-    "jlat_CESM_20mem[:] = jlat_CESM_20mem[:] - jlatp_CESM_em\n",
-    "jlat_CSIRO_20mem[:] = jlat_CSIRO_20mem[:] - jlatp_CSIRO_em\n",
-    "jlat_GFDL_20mem[:] = jlat_GFDL_20mem[:] - jlatp_GFDL_em\n",
-    "jlat_MPI_20mem[:] = jlat_MPI_20mem[:] - jlatp_MPI_em\n",
-    "\n",
-    "jlatconcat = np.concatenate( (jlat_CanESM2_20mem, jlat_CESM_20mem, jlat_CSIRO_20mem, jlat_GFDL_20mem, jlat_MPI_20mem))\n",
-    "ivmin95 = np.percentile(jlatconcat, 2.5)\n",
-    "ivmax95 = np.percentile(jlatconcat, 97.5)\n",
+    "difs = np.zeros([2000])\n",
+    "count = 0\n",
+    "for imem in range(0,20,1):\n",
+    "    indices = np.argwhere(np.arange(0,20,1) != imem)\n",
+    "    for imem2 in indices:\n",
+    "        difs[count] = jlat_CanESM2_20mem[imem2]-jlat_CanESM2_20mem[imem]\n",
+    "        count=count+1\n",
+    "        difs[count] = jlat_CESM_20mem[imem2]-jlat_CESM_20mem[imem]\n",
+    "        count=count+1\n",
+    "        difs[count] = jlat_CSIRO_20mem[imem2]-jlat_CSIRO_20mem[imem]\n",
+    "        count=count+1\n",
+    "        difs[count] = jlat_GFDL_20mem[imem2]-jlat_GFDL_20mem[imem]\n",
+    "        count=count+1\n",
+    "        difs[count] = jlat_MPI_20mem[imem2]-jlat_MPI_20mem[imem]\n",
+    "        count=count+1\n",
+    "        \n",
+    "difs = difs[0:count]\n",
+    "ivmin95 = np.percentile(difs,2.5)\n",
+    "ivmax95 = np.percentile(difs,97.5)\n",
     "ivmin95 = xr.DataArray(ivmin95, name='ivmin95')\n",
     "ivmax95 = xr.DataArray(ivmax95, name='ivmax95')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<xarray.DataArray ()>\n",
-      "array(-1.11172309)\n"
-     ]
-    }
-   ],
-   "source": [
-    "ivmin95 = xr.DataArray(ivmin95)\n",
-    "print(ivmin95)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
