--- a/ERRORCALC/VWIND/errorcalc_vwind_1mem.ipynb
+++ b/ERRORCALC/VWIND/errorcalc_vwind_1mem.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5th to 95th percentile of internal variability range using the first 20 members from each\n",
+    "for j, le in enumerate(le_models):\n",
+    "        \n",
+    "    ds = le_dat.sel(Model = le).dropna(dim = \"member\", how = \"all\")\n",
+    "    ds = ds.isel(member=slice(0,20))\n",
+    "    vpast_eddy = ds['vpast_djf'] - ds['vpast_djf'].mean(\"lon\")\n",
+    "    vpastsw = avg.cosweightlonlat(vpast_eddy, 250, 265, 25, 37)\n",
+    "    difs = np.zeros([500])\n",
+    "    count=0\n",
+    "    for imem in range(0,20,1):\n",
+    "        indices=np.argwhere(np.arange(0,20,1) !=imem)\n",
+    "        for imem2 in indices:\n",
+    "        #for imem2 in range(imem+1,20,1):\n",
+    "            difs[count] = vpastsw[imem2]-vpastsw[imem]\n",
+    "            count=count+1\n",
+    "\n",
+    "    difs = difs[0:count]\n",
+    "    if (j == 0):\n",
+    "        difsall = np.zeros([5*count])\n",
+    "            \n",
+    "    difsall[j*count:(j+1)*count]=difs[:]\n",
+    "    \n",
+    "ivmin95=np.percentile(difsall,2.5)\n",
+    "ivmax95=np.percentile(difsall,97.5)\n",
+    "ivmin95 = xr.DataArray(ivmin95, name='ivmin95')\n",
+    "ivmax95 = xr.DataArray(ivmax95, name='ivmax95')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +278,9 @@
     "                         'r_udiff_vdiff': xr.DataArray(r_udiff_vdiff, name='r_udiff_vdiff'),\n",
     "                        'r_psi_prwest': xr.DataArray(r_psi_prwest, name='r_psi_prwest'), \n",
     "                        'r_psi_prsouth': xr.DataArray(r_psi_prsouth, name='r_psi_prsouth'), \n",
-    "                        'r_psi_prmex': xr.DataArray(r_psi_prmex, name='r_psi_prmex')})\n",
+    "                        'r_psi_prmex': xr.DataArray(r_psi_prmex, name='r_psi_prmex'),\n",
+    "                        'ivmin95': xr.DataArray(ivmin95),\n",
+    "                        'ivmax95': xr.DataArray(ivmax95)})\n",
     "\n",
     "error_1mem.to_netcdf(\"./DATA/errors_1mem.nc\")"
    ]
